[gd_scene load_steps=6 format=2]

[ext_resource path="res://golden_trophy.png" type="Texture" id=1]
[ext_resource path="res://CompleteTrophy.gd" type="Script" id=2]
[ext_resource path="res://ChocolateCounter.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.6624, 21.6491 )

[node name="CompleteTrophy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.33481, -1.33481 )
scale = Vector2( 0.0836938, 0.0836938 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.18921, -1.18921 )
shape = SubResource( 2 )

[node name="ChocolateCounter" type="Node2D" parent="."]
script = ExtResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="all_chocolates_collected" from="ChocolateCounter" to="." method="_on_ChocolateCounter_all_chocolates_collected"]
